# RedWire2

./: .gitmodules  CMakeLists.txt  design.txt
ext/: CMakeLists.txt
include/: main.hpp
include/Core/: Board.hpp  Chain.hpp  Chunk.hpp  Layer.hpp  TileTag.hpp  TileType.hpp  Tiles.hpp  WireData.hpp
include/Functional/: Board.hpp  Drawing.hpp  Engine.hpp  Tiles.hpp
include/Interface/: Application.hpp  Components.hpp
include/Utility/: Functions.hpp  RecyclingList.hpp  SimpleTypes.hpp  Types.hpp  Vector2.hpp
rsc/: imgui.ini
rsc/Tiles/: Position.glsl  Quad.vert  Tile.frag  Wire.vert  WireShader.frag
src/: CMakeLists.txt  Layer.cpp  Layer.hpp  LayerView.cpp  LayerView.hpp  Vector2.hpp  main.cpp  main.hpp
src/Core/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  Layer.cpp  Layer.hpp  TileTag.hpp  TileType.hpp  WireData.hpp
src/Functional/: Board.cpp  CMakeLists.txt  Chain.cpp  Chunk.cpp  Drawing.cpp  Engine.cpp  Tiles.cpp
src/Interface/: Application.cpp  CMakeLists.txt  Components.cpp  LayerView.cpp  LayerView.hpp
src/Utility/: CMakeLists.txt  Functions.cpp  Vector2.hpp
tests/: CMakeLists.txt  RecyclingListTests.cpp  WireBridgeTests.cpp
